clean up spacing

--- a/mediathread/templates/projects/project_list.html
+++ b/mediathread/templates/projects/project_list.html
@@ -24,8 +24,8 @@ Projects
             </div>
             <div class="accordion mb-3" id="assignment-accordion">
                 <div class="card border-0">
-                    <div class="card-header" id="headingOne">
-                        <h2 class="mb-0 text-right">
+                    <div class="card-header pb-0" id="headingOne">
+                        <h2>
                             <button class="btn btn-link btn-block text-left btn-show-assignments"
                                 type="button" data-toggle="collapse"
                                 data-target="#collapseOne" aria-expanded="true"
