clean up spacing

--- a/mediathread/templates/projects/assignment_list.html
+++ b/mediathread/templates/projects/assignment_list.html
@@ -69,7 +69,7 @@ Assignments
                             aria-labelledby="headingOne"
                             data-parent="#assignment-accordion">
                             {% if not object_list.exists %}
-                                <h4 class="text-center mb-4">Add an assignment</h4>
+                                <h4 class="text-center">Add an assignment</h4>
                             {% endif %}
                             {% include "projects/assignment_list_cards.html" %}
                         </div>
