--- a/mediathread/templates/projects/assignment_list_cards.html
+++ b/mediathread/templates/projects/assignment_list_cards.html
@@ -1,4 +1,4 @@
-<div class="card-body pt-0">
+<div class="card-body">
     <div class="card-deck">
         <div class="card">
             <div class="card-body">
